--- a/src/app/Medication/components/medication-grid/medication-grid.component.html
+++ b/src/app/Medication/components/medication-grid/medication-grid.component.html
@@ -1,20 +1,27 @@
 <div class="main-container">
   <h1>Medications</h1>
   <div class="medication-line">
-    <button mat-flat-button color="primary" (click)="createMedication()" class="add-button">
+    <button
+      mat-flat-button
+      color="primary"
+      (click)="createMedication()"
+      class="add-button"
+    >
       ADD
     </button>
   </div>
   @if (medications.length === 0) {
     <div>No Medications</div>
+  } @else if (medications.length > 0) {
+    <div>
+      @for (medication of medications; track medication) {
+        <app-medication-card
+          [medication]="medication"
+          (createMedicationRequest)="createMedication()"
+          (deleteMedicationRequest)="deleteMedication($event)"
+          (editMedicationRequest)="editMedication($event)"
+        ></app-medication-card>
+      }
+    </div>
   }
 </div>
-@if (medications.length > 0) {
-  <div>
-    @for (medication of medications; track medication) {
-      <app-medication-card [medication]="medication" (createMedicationRequest)="createMedication()"
-        (deleteMedicationRequest)="deleteMedication($event)" (editMedicationRequest)="editMedication($event)"
-      ></app-medication-card>
-    }
-  </div>
-}
