--- a/src/app/Schedule/components/schedule-table/schedule-table.component.html
+++ b/src/app/Schedule/components/schedule-table/schedule-table.component.html
@@ -1,20 +1,25 @@
 <div class="title">
   <h2>Schedule List</h2>
-  <button mat-icon-button color="primary" (click)="createSchedule()" aria-label="Add a medication">
-    <mat-icon style="transform: scale(1.5);">add_circle</mat-icon>
+  <button
+    mat-icon-button
+    color="primary"
+    (click)="createSchedule()"
+    aria-label="Add a medication"
+  >
+    <mat-icon style="transform: scale(1.5)">add_circle</mat-icon>
   </button>
 </div>
 
 @if (schedules.length === 0) {
   <div>No Schedules</div>
-}
-
-@if (schedules.length > 0) {
+} @else if (schedules.length > 0) {
   <table mat-table [dataSource]="schedules" class="mat-elevation-z8">
     <!-- Name Column -->
     <ng-container matColumnDef="schedule-start_date">
       <th mat-header-cell *matHeaderCellDef>Time</th>
-      <td mat-cell *matCellDef="let schedule">{{ schedule.start_date | date:'shortTime'}}</td>
+      <td mat-cell *matCellDef="let schedule">
+        {{ schedule.start_date | date: 'shortTime' }}
+      </td>
     </ng-container>
     <!-- Actions Column -->
     <ng-container matColumnDef="schedule-actions">
