--- a/src/app/User/components/contact-card/contact-card.component.html
+++ b/src/app/User/components/contact-card/contact-card.component.html
@@ -4,11 +4,8 @@
       <span>
         {{ contact.surname_1 }} {{ contact.surname_2 }}, {{ contact.name }}
       </span>
-    }
-    @if (!contact.surname_2) {
-      <span>
-        {{ contact.surname_1 }}, {{ contact.name }}
-      </span>
+    } @else {
+      <span> {{ contact.surname_1 }}, {{ contact.name }} </span>
     }
     <button mat-icon-button (click)="removeUserContact(contact.email)">
       <mat-icon color="warn">delete</mat-icon>
