--- a/src/app/User/components/register/register.component.html
+++ b/src/app/User/components/register/register.component.html
@@ -10,16 +10,10 @@
         <input matInput type="text" [formControl]="name" />
         @if (name.hasError('required')) {
           <mat-error>Name is required</mat-error>
-        }
-        @if (name.hasError('minlength')) {
-          <mat-error>
-            Name must be at least 5 characters long.
-          </mat-error>
-        }
-        @if (name.hasError('maxlength')) {
-          <mat-error>
-            Name can be max 25 characters long.
-          </mat-error>
+        } @else if (name.hasError('minlength')) {
+          <mat-error> Name must be at least 5 characters long. </mat-error>
+        } @else if (name.hasError('maxlength')) {
+          <mat-error> Name can be max 25 characters long. </mat-error>
         }
       </mat-form-field>
 
@@ -28,16 +22,10 @@
         <input matInput type="text" [formControl]="surname_1" />
         @if (surname_1.hasError('required')) {
           <mat-error>Surname1 is required</mat-error>
-        }
-        @if (surname_1.hasError('minlength')) {
-          <mat-error>
-            Surname1 must be at least 3 characters long.
-          </mat-error>
-        }
-        @if (surname_1.hasError('maxlength')) {
-          <mat-error>
-            Surname1 can be max 25 characters long.
-          </mat-error>
+        } @else if (surname_1.hasError('minlength')) {
+          <mat-error> Surname1 must be at least 3 characters long. </mat-error>
+        } @else if (surname_1.hasError('maxlength')) {
+          <mat-error> Surname1 can be max 25 characters long. </mat-error>
         }
       </mat-form-field>
 
@@ -45,14 +33,9 @@
         <mat-label>Surname2</mat-label>
         <input matInput type="text" [formControl]="surname_2" />
         @if (surname_2.hasError('minlength')) {
-          <mat-error>
-            Surname2 must be at least 3 characters long.
-          </mat-error>
-        }
-        @if (surname_2.hasError('maxlength')) {
-          <mat-error>
-            Surname2 can be max 25 characters long.
-          </mat-error>
+          <mat-error> Surname2 must be at least 3 characters long. </mat-error>
+        } @else if (surname_2.hasError('maxlength')) {
+          <mat-error> Surname2 can be max 25 characters long. </mat-error>
         }
       </mat-form-field>
 
@@ -61,16 +44,11 @@
         <input matInput type="text" [formControl]="alias" />
         @if (alias.hasError('required')) {
           <mat-error>Alias is required</mat-error>
-        }
-        @if (alias.hasError('minlength')) {
-          <mat-error>
-            Alias must be at least 3 characters long.
-          </mat-error>
+        } @else if (alias.hasError('minlength')) {
+          <mat-error> Alias must be at least 3 characters long. </mat-error>
         }
         @if (alias.hasError('maxlength')) {
-          <mat-error>
-            Alias can be max 25 characters long.
-          </mat-error>
+          <mat-error> Alias can be max 25 characters long. </mat-error>
         }
       </mat-form-field>
 
@@ -89,8 +67,7 @@
         <input matInput type="email" [formControl]="email" />
         @if (email.hasError('required')) {
           <mat-error>Email is required</mat-error>
-        }
-        @if (email.hasError('pattern')) {
+        } @else if (email.hasError('pattern')) {
           <mat-error>Email not a valid format.</mat-error>
         }
       </mat-form-field>
@@ -100,11 +77,8 @@
         <input matInput type="password" [formControl]="password" />
         @if (password.hasError('required')) {
           <mat-error>Password is required</mat-error>
-        }
-        @if (password.hasError('minlength')) {
-          <mat-error>
-            Password must be at least 8 characters long.
-          </mat-error>
+        } @else if (password.hasError('minlength')) {
+          <mat-error> Password must be at least 8 characters long. </mat-error>
         }
       </mat-form-field>
 
@@ -113,11 +87,8 @@
         <input matInput type="password" [formControl]="confirmPassword" />
         @if (confirmPassword.hasError('required')) {
           <mat-error>Confirm Password is required</mat-error>
-        }
-        @if (confirmPassword.errors?.['PasswordNoMatch']) {
-          <mat-error>
-            Passwords must match.
-          </mat-error>
+        } @else if (confirmPassword.errors?.['PasswordNoMatch']) {
+          <mat-error> Passwords must match. </mat-error>
         }
       </mat-form-field>
     </div>
