--- a/src/app/User/components/user-grid/user-grid.component.html
+++ b/src/app/User/components/user-grid/user-grid.component.html
@@ -3,12 +3,14 @@
   @if (users.length > 0) {
     <div>
       @for (user of users; track user) {
-        <app-user-card [user]="user" (deleteUserRequest)="deleteUser($event)" (editUserRequest)="editUser($event)"
+        <app-user-card
+          [user]="user"
+          (deleteUserRequest)="deleteUser($event)"
+          (editUserRequest)="editUser($event)"
         ></app-user-card>
       }
     </div>
-  }
-  @if (users.length === 0) {
+  } @else if (users.length === 0) {
     <div>No contacts</div>
   }
 </div>
