--- a/src/app/Medication/components/medication-list/medication-list.component.html
+++ b/src/app/Medication/components/medication-list/medication-list.component.html
@@ -2,14 +2,19 @@
   <p id="medicationListFeedback"></p>
 </div>
 @if ((selectDisplayIsMobile$ | async) === false) {
-  <app-medication-table [medications]="(selectMedications$ | async)" (createMedicationRequest)="createMedication()"
-    (deleteMedicationRequest)="deleteMedication($event)" (editMedicationRequest)="editMedication($event)"
-    >
+  <app-medication-table
+    [medications]="selectMedications$ | async"
+    (createMedicationRequest)="createMedication()"
+    (deleteMedicationRequest)="deleteMedication($event)"
+    (editMedicationRequest)="editMedication($event)"
+  >
   </app-medication-table>
-}
-@if ((selectDisplayIsMobile$ | async) === true) {
-  <app-medication-grid [medications]="(selectMedications$ | async)" (createMedicationRequest)="createMedication()"
-    (deleteMedicationRequest)="deleteMedication($event)" (editMedicationRequest)="editMedication($event)"
-    >
+} @else {
+  <app-medication-grid
+    [medications]="selectMedications$ | async"
+    (createMedicationRequest)="createMedication()"
+    (deleteMedicationRequest)="deleteMedication($event)"
+    (editMedicationRequest)="editMedication($event)"
+  >
   </app-medication-grid>
 }
