--- a/src/app/Schedule/components/schedule-grid/schedule-grid.component.html
+++ b/src/app/Schedule/components/schedule-grid/schedule-grid.component.html
@@ -7,12 +7,15 @@
     @if (schedules.length > 0) {
       <div>
         @for (schedule of schedules; track schedule) {
-          <app-schedule-card [schedule]="schedule" (deleteScheduleRequest)="deleteSchedule($event)"
-          (editScheduleRequest)="editSchedule($event)"></app-schedule-card>
+          <app-schedule-card
+            [schedule]="schedule"
+            (deleteScheduleRequest)="deleteSchedule($event)"
+            (editScheduleRequest)="editSchedule($event)"
+          ></app-schedule-card>
         }
       </div>
-    }
-    @if (schedules.length === 0) {
+    } @else if (schedules.length === 0) {
       <div>No Schedules</div>
     }
   </div>
+</div>
