--- a/src/app/Schedule/components/today-list/today-list.component.html
+++ b/src/app/Schedule/components/today-list/today-list.component.html
@@ -38,8 +38,8 @@
           {{ schedule.medication.name }}
         </mat-card-content>
         <mat-card-actions>
-          <button mat-button (click)="takeMedication(schedule)">Take</button>
-          <button mat-button (click)="skipMedication(schedule)">Skip</button>
+          <button mat-button (click)="takeMedication(schedule.id)">Take</button>
+          <button mat-button (click)="skipMedication(schedule.id)">Skip</button>
         </mat-card-actions>
       </mat-card>
     }
