NG0956: Tracking expression caused re-creation of the DOM structure
https://angular.dev/errors/NG0956

--- a/src/app/Medication/components/medication-card/medication-card.component.html
+++ b/src/app/Medication/components/medication-card/medication-card.component.html
@@ -3,12 +3,14 @@
     <div class="medication-info">
       <div class="medication-title">
         <div>{{ medication.name }}</div>
-        <div>@if (medication.disabled) {
-          <mat-icon>pause</mat-icon>
-        }</div>
+        <div>
+          @if (medication.disabled) {
+            <mat-icon>pause</mat-icon>
+          }
+        </div>
       </div>
       <div>
-        @for (schedule of medication.schedules; track schedule) {
+        @for (schedule of medication.schedules; track schedule.id) {
           <ul class="schedule-list">
             <li>{{ schedule.start_date | date: 'shortTime' }}</li>
           </ul>
