--- a/src/app/Medication/components/medication-table/medication-table.component.html
+++ b/src/app/Medication/components/medication-table/medication-table.component.html
@@ -25,7 +25,7 @@
         <th mat-header-cell *matHeaderCellDef>Schedules</th>
         <td mat-cell *matCellDef="let medication">
           <ul class="code-editor-options-menu">
-            @for (schedule of medication.schedules; track schedule) {
+            @for (schedule of medication.schedules; track schedule.id) {
               <li>{{ schedule.start_date | date: 'shortTime' }}</li>
             }
           </ul>
