--- a/src/app/User/components/contact-grid/contact-grid.component.html
+++ b/src/app/User/components/contact-grid/contact-grid.component.html
@@ -12,14 +12,14 @@
   </div>
   @if (contacts.length > 0) {
     <div>
-      @for (contact of contacts; track contact) {
+      @for (contact of contacts; track contact.id) {
         <app-contact-card
           [contact]="contact"
           (removeUserContactRequest)="removeUserContact($event)"
         ></app-contact-card>
       }
     </div>
-  } @else if (contacts.length === 0) {
+  } @else {
     <div>No contacts</div>
   }
 </div>
