--- a/src/app/User/components/user-grid/user-grid.component.html
+++ b/src/app/User/components/user-grid/user-grid.component.html
@@ -2,7 +2,7 @@
   <h1>User List</h1>
   @if (users.length > 0) {
     <div>
-      @for (user of users; track user) {
+      @for (user of users; track user.id) {
         <app-user-card
           [user]="user"
           (deleteUserRequest)="deleteUser($event)"
