code consistency: if/else

--- a/src/app/Medication/components/medication-grid/medication-grid.component.html
+++ b/src/app/Medication/components/medication-grid/medication-grid.component.html
@@ -10,9 +10,7 @@
       ADD
     </button>
   </div>
-  @if (medications.length === 0) {
-    <div>No Medications</div>
-  } @else if (medications.length > 0) {
+  @if (medications && medications.length > 0) {
     <div>
       @for (medication of medications; track medication.id) {
         <app-medication-card
@@ -23,5 +21,7 @@
         ></app-medication-card>
       }
     </div>
+  } @else {
+    <div>No Medications</div>
   }
 </div>
