--- a/src/app/User/components/contact-table/contact-table.component.html
+++ b/src/app/User/components/contact-table/contact-table.component.html
@@ -11,7 +11,7 @@
     </button>
   </div>
 
-  @if (contacts.length > 0) {
+  @if (contacts && contacts.length > 0) {
     <table mat-table [dataSource]="contacts" class="mat-elevation-z8">
       <!-- surname_1 Column -->
       <ng-container matColumnDef="contact-surname_1">
@@ -57,7 +57,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-  } @else if (contacts.length === 0) {
+  } @else {
     <div>No contacts</div>
   }
 </div>
